<resources>

    <string name="google_maps_key">string1</string>
    <string name="app_name">Dog Mate</string>
    <string name="menuString">Dog Owners Social Media</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="location_categories">Choose Location Category</string>
    <string name="location_subcat">Choose Location Sub-Category</string>
    <string name="isInsideSitting">Is sitting allowed inside?</string>
    <string name="isShadow">Is shadowed</string>
    <string name="shadowAmount">Shadow level</string>
    <string name="releaseDog">Can release dog</string>
    <string name="water">Are there water resources?</string>
    <string name="addLocText">Add Location!</string>
    <string name="locationName">Type Location Name:</string>
    <string name="surface">Surface Type:</string>
    <string name="cleanliness">Cleanliness:</string>
    <string name="busy">How busy:</string>
    <string name="openSpace">Open Space</string>
    <string name="closedSpace">Gated Space</string>
    <string name="serviceHours">24/7 service</string>
    <string name="delivery">Is delivery included</string>
    <string name="delArea">Delivery areas:</string>
    <string name="delAreaHint">i.e: North Tel Aviv</string>
    <string name="treatmentHint">Tell us about the service you received</string>
    <string name="nextToBeach">Beach close by</string>
    <string name="addtionalSer">Addional Services:</string>
    <string name="isFoodAround">Dog food in the area</string>
    <string name="HotelStarts">Number of Starts</string>
    <string name="priceLevel">Price Level</string>
    <string name="chooseCat">Choose Category</string>
    <string name="chooseSubCat">Choose Subcategory</string>
    <string name="noCategoryChosen">You need to choose a category and subcategory</string>
    <string name="incorrectCategoryChosen">Incorrect Subcategory Selected!</string>
    <string name="addReviewButton">Add your review</string>
    <string name="goToReviewPage">Go To Reviews Page</string>
    <string name="deleteLocationButton">Delete Location</string>
    <string name="title_activity_show_locations">Map</string>
    <string name="SearchForPlaces">Search For Places</string>
    <string name="searchPlaceHint">i.e. Dog park Dubnov</string>
    <string name="ShowLoc">Show Locations</string>
    <string name="revComment">Let us know More:</string>
    <string name="reatePlace">Rate Location</string>
    <string name="Reviews">Location Reviews</string>
    <string name="noReviews">"No Review yet. Be the first to rate!</string>
    <string name="dog_item_name">Name:</string>
    <string name="dog_item_city">City:</string>
    <string name="dog_item_neighborhood">Neighborhood:</string>
    <string name="dog_item_size">Size:</string>
    <string name="dog_item_breed">Breed:</string>
    <string name="dog_item_temperament">Temperament:</string>
    <string name="permission_necessary" />
    <string name="storage_permission_is_encessary_to_wrote_event" />

    <string-array name="categories_array">
        <item>Nature</item>
        <item>Dog Parks</item>
        <item>Services</item>
        <item>Vacation</item>
        <item>Entertainment</item>
    </string-array>
    <string-array name="entertainment_array">
        <item>Restaurants</item>
        <item>Coffee Shop</item>
        <item>Pub</item>
    </string-array>
    <string-array name="nature_array">
        <item>Beaches</item>
        <item>Nature Reserve</item>
    </string-array>
    <string-array name="dog_parks_array">
        <item>Dog Parks</item>
    </string-array>
    <string-array name="services_array">
        <item>Veterinarians</item>
        <item>Barber Shop</item>
        <item>Pet Supply Store</item>
    </string-array>
    <string-array name="vacation_array">
        <item>Hotel</item>
        <item>Camping Site</item>
        <item>Zimmer</item>
        <item>Dog Pension</item>
    </string-array>
    <string-array name="surface_type_array">
        <item>Grass</item>
        <item>Gravel</item>
        <item>Soil</item>
    </string-array>



    <string-array name="search_cities">
        <item />
        <item>Acre</item>
        <item>Afula</item>
        <item>Arad</item>
        <item>Arraba</item>
        <item>Ashdod</item>
        <item>Ashkelon</item>
        <item>Baqa al-Gharbiyye</item>
        <item>Bat Yam</item>
        <item>Beersheba</item>
        <item>Beit She\'an</item>
        <item>Beit Shemesh</item>
        <item>Bnei Brak</item>
        <item>Dimona</item>
        <item>Eilat</item>
        <item>El\'ad</item>
        <item>Giv\'at Shmue</item>
        <item>Givatayim</item>
        <item>Hadera</item>
        <item>Haifa</item>
        <item>Herzliya</item>
        <item>Hod HaSharon</item>
        <item>Holon</item>
        <item>Jerusalem</item>
        <item>Kafr Qasim</item>
        <item>Karmie</item>
        <item>Kfar Saba</item>
        <item>Kfar Yona</item>
        <item>Kiryat Ata</item>
        <item>Kiryat Bialik</item>
        <item>Kiryat Gat</item>
        <item>Kiryat Malakh</item>
        <item>Kiryat Motzkin</item>
        <item>Kiryat Ono</item>
        <item>Kiryat Shmona</item>
        <item>Kiryat Yam</item>
        <item>Lod</item>
        <item>Ma\'alot-Tarshiha</item>
        <item>Migdal HaEmek</item>
        <item>Modi\'in-Maccabim-Re\'ut</item>
        <item>Nahariya</item>
        <item>Nazareth</item>
        <item>Nesher</item>
        <item>Ness Ziona</item>
        <item>Netanya</item>
        <item>Netivot</item>
        <item>Nof HaGalil</item>
        <item>Ofakim</item>
        <item>Or Akiva</item>
        <item>Or Yehuda</item>
        <item>Petah Tikva</item>
        <item>Qalansawe</item>
        <item>Ra\'anana</item>
        <item>Rahat</item>
        <item>Ramat Gan</item>
        <item>Ramat HaSharon</item>
        <item>Ramla</item>
        <item>Rehovot</item>
        <item>Rishon LeZion</item>
        <item>Rosh HaAyin</item>
        <item>Safed</item>
        <item>Sakhnin</item>
        <item>Shefa-\'Amr</item>
        <item>Tamra</item>
        <item>Tayibe</item>
        <item>Tel Aviv-Yafo</item>
        <item>Tiberias</item>
        <item>Tira</item>
        <item>Tirat Carme</item>
        <item>Umm al-Fahm</item>
        <item>Yavne</item>
        <item>Yehud-Monosson</item>
        <item>Yokneam Illit</item>
    </string-array>

    <string-array name="search_sizes">
        <item />
        <item>Petite</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
    </string-array>

    <string-array name="search_breeds">
        <item />
        <item>Affenpinscher</item>
        <item>Afghan hound</item>
        <item>Airedale terrier</item>
        <item>Akita</item>
        <item>Alaskan Malamute</item>
        <item>American Staffordshire terrier</item>
        <item>American water spaniel</item>
        <item>Australian cattle dog</item>
        <item>Australian shepherd</item>
        <item>Australian terrier</item>
        <item>basenji</item>
        <item>basset hound</item>
        <item>beagle</item>
        <item>bearded collie</item>
        <item>Bedlington terrier</item>
        <item>Bernese mountain dog</item>
        <item>bichon frise</item>
        <item>black and tan coonhound</item>
        <item>bloodhound</item>
        <item>border collie</item>
        <item>border terrier</item>
        <item>borzoi</item>
        <item>Boston terrier</item>
        <item>bouvier des Flandres</item>
        <item>boxer</item>
        <item>briard</item>
        <item>Brittany</item>
        <item>Brussels griffon</item>
        <item>bull terrier</item>
        <item>bulldog</item>
        <item>bullmastiff</item>
        <item>cairn terrier</item>
        <item>Canaan dog</item>
        <item>Chesapeake Bay retriever</item>
        <item>Chihuahua</item>
        <item>Chinese crested</item>
        <item>Chinese shar-pei</item>
        <item>chow chow</item>
        <item>Clumber spaniel</item>
        <item>cocker spaniel</item>
        <item>collie</item>
        <item>curly-coated retriever</item>
        <item>dachshund</item>
        <item>Dalmatian</item>
        <item>Doberman pinscher</item>
        <item>English cocker spaniel</item>
        <item>English setter</item>
        <item>English springer spaniel</item>
        <item>English toy spaniel</item>
        <item>Eskimo dog</item>
        <item>Finnish spitz</item>
        <item>flat-coated retriever</item>
        <item>fox terrier</item>
        <item>foxhound</item>
        <item>French bulldog</item>
        <item>German shepherd</item>
        <item>German shorthaired pointer</item>
        <item>German wirehaired pointer</item>
        <item>golden retriever</item>
        <item>Gordon setter</item>
        <item>Great Dane</item>
        <item>greyhound</item>
        <item>Irish setter</item>
        <item>Irish water spaniel</item>
        <item>Irish wolfhound</item>
        <item>Jack Russell terrier</item>
        <item>Japanese spaniel</item>
        <item>keeshond</item>
        <item>Kerry blue terrier</item>
        <item>komondor</item>
        <item>kuvasz</item>
        <item>Labrador retriever</item>
        <item>Lakeland terrier</item>
        <item>Lhasa apso</item>
        <item>Maltese</item>
        <item>Manchester terrier</item>
        <item>mastiff</item>
        <item>Mexican hairless</item>
        <item>Newfoundland</item>
        <item>Mixed breeds</item>
        <item>Norwegian elkhound</item>
        <item>Norwich terrier</item>
        <item>otterhound</item>
        <item>papillon</item>
        <item>Pekingese</item>
        <item>pointer</item>
        <item>Pomeranian</item>
        <item>poodle</item>
        <item>pug</item>
        <item>puli</item>
        <item>Rhodesian ridgeback</item>
        <item>Rottweiler</item>
        <item>Saint Bernard</item>
        <item>saluki</item>
        <item>Samoyed</item>
        <item>schipperke</item>
        <item>schnauzer</item>
        <item>Scottish deerhound</item>
        <item>Scottish terrier</item>
        <item>Sealyham terrier</item>
        <item>Shetland sheepdog</item>
        <item>shih tzu</item>
        <item>Siberian husky</item>
        <item>silky terrier</item>
        <item>Skye terrier</item>
        <item>Staffordshire bull terrier</item>
        <item>soft-coated wheaten terrier</item>
        <item>Sussex spaniel</item>
        <item>spitz</item>
        <item>Tibetan terrier</item>
        <item>vizsla</item>
        <item>Weimaraner</item>
        <item>Welsh terrier</item>
        <item>West Highland white terrier</item>
        <item>whippet</item>
        <item>Yorkshire terrier</item>
    </string-array>

    <string-array name="search_temperaments">
        <item />
        <item>Confident</item>
        <item>Dominant</item>
        <item>Energetic</item>
        <item>Playful</item>
        <item>Serene</item>
        <item>Shy</item>
        <item>Unsecured</item>
    </string-array>


</resources>