<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/includeDelivetyService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/delivery"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewDelArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/delArea"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDelAreaService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/delAreaHint"
        android:inputType="textPersonName"
        />
</LinearLayout>




