<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/availableWaterNature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/water" />

    <CheckBox
        android:id="@+id/releaseDogIsAllowedNature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/releaseDog" />

    <TextView
        android:id="@+id/textViewShadowLevelNature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/shadowAmount"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/shadowLevelRatingNature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>