<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/addtionalSer" />

    <EditText
        android:id="@+id/editTextAddionalServicesCamping"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="100"/>

    <CheckBox
        android:id="@+id/nextToBeachCamping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/nextToBeach" />

    <CheckBox
        android:id="@+id/isFoodAroundCamping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/isFoodAround" />

</LinearLayout>