<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Add_Location.AddLocation">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asul"
        android:padding="10dp"
        android:text="@string/locationName"
        android:textSize="18sp" />

    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        tools:layout="@layout/places_autocomplete_item_prediction" />

    <Spinner
        android:id="@+id/categories_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/categories_array"
        android:padding="10dp"
        android:prompt="@string/location_categories" />

    <Spinner
        android:id="@+id/subcategories_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:prompt="@string/location_categories" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">


    </FrameLayout>

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:onClick="onClickSaveLocation"
        android:text="@string/addLocText"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

</LinearLayout>